# pit-performance

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  all_plotter.py  cisco_trimmed_100_100.csv  cisco_trimmed_10_10.csv  cisco_trimmed_200_200.csv  cisco_trimmed_300_300.csv  cisco_trimmed_400_400.csv  cisco_trimmed_metis_100_100.csv  cisco_trimmed_metis_10_10.csv  cmake_install.cmake  metis_files.txt  pit_test.c  runner.sh
data/: cisco_trimmed_100_100.csv  cisco_trimmed_10_10.csv  cisco_trimmed_200_200.csv  cisco_trimmed_300_300.csv  cisco_trimmed_400_400.csv  cisco_trimmed_metis_200_200.csv  cisco_trimmed_metis_300_300.csv  cisco_trimmed_metis_400_400.csv
